--- a/rodillos/files/stacks_page_page4.css
+++ b/rodillos/files/stacks_page_page4.css
@@ -746,3 +746,55 @@
 	margin:  2px;
 	padding:  10px;
 }
+#stacks_in_99_page4_button {
+	display:block;
+	position: relative;
+	text-align: center;
+}
+
+
+#stacks_in_99_page4 a:link, #stacks_in_99_page4 a:visited {
+	 display:inline-block; 
+	
+	
+	position: relative;
+	text-decoration:none;
+}
+#stacks_in_99_page4 a:hover, #stacks_in_99_page4 a:active {
+	color:#FFFFFF;
+}
+
+
+
+
+
+
+
+#stacks_in_99_page4 a:link, #stacks_in_99_page4 a:visited {
+	background-color:#15A050;
+	background: -webkit-gradient(linear, left top, left bottom, from(#15A050), to(#0C6030));
+	border:1px solid #0C6030;
+	padding:3px 20px;
+	border-radius:30px;
+	color:#FFFFFF;
+	box-shadow:rgba(0, 0, 0, 0.5) 0px 1px 2px;
+	margin:5px;
+	font-weight:bold;
+}
+#stacks_in_99_page4 a:hover {
+	background-color:#16AC56;
+	background: -webkit-gradient(linear, left top, left bottom, from(#16AC56), to(#0B5329));
+	box-shadow:rgba(0, 0, 0, 0.25) 0px 2px 4px;
+}
+#stacks_in_99_page4 a:active {
+	background-color:#15A050;
+	box-shadow:rgba(0, 0, 0, 0.75) 0px 0px 4px inset;
+}
+
+
+
+
+#stacks_in_99_page4 {
+	margin:  20px;
+	padding:  2px;
+}
