--- a/varios/files/stacks_page_page6.css
+++ b/varios/files/stacks_page_page6.css
@@ -474,3 +474,161 @@
 	margin:  2px;
 	padding:  10px;
 }
+#stacks_in_54_page6>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_54_page6>.s3_row>.s3_column_left {
+	width: 50.00%;
+}
+
+#stacks_in_54_page6>.s3_row>.s3_column_right {
+	width: 50.000000%;
+}
+
+
+
+
+#stacks_in_54_page6>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_54_page6>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_54_page6>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+}
+
+
+
+
+
+#stacks_in_57_page6_button {
+	display:block;
+	position: relative;
+	text-align: center;
+}
+
+
+#stacks_in_57_page6 a:link, #stacks_in_57_page6 a:visited {
+	 display:inline-block; 
+	
+	
+	position: relative;
+	text-decoration:none;
+}
+#stacks_in_57_page6 a:hover, #stacks_in_57_page6 a:active {
+	color:#FFFFFF;
+}
+
+
+
+
+
+
+
+#stacks_in_57_page6 a:link, #stacks_in_57_page6 a:visited {
+	background-color:#15A050;
+	background: -webkit-gradient(linear, left top, left bottom, from(#15A050), to(#0C6030));
+	border:1px solid #0C6030;
+	padding:3px 20px;
+	border-radius:30px;
+	color:#FFFFFF;
+	box-shadow:rgba(0, 0, 0, 0.5) 0px 1px 2px;
+	margin:5px;
+	font-weight:bold;
+}
+#stacks_in_57_page6 a:hover {
+	background-color:#16AC56;
+	background: -webkit-gradient(linear, left top, left bottom, from(#16AC56), to(#0B5329));
+	box-shadow:rgba(0, 0, 0, 0.25) 0px 2px 4px;
+}
+#stacks_in_57_page6 a:active {
+	background-color:#15A050;
+	box-shadow:rgba(0, 0, 0, 0.75) 0px 0px 4px inset;
+}
+
+
+
+
+#stacks_in_57_page6 {
+	margin:  20px;
+	padding:  2px;
+}
+#stacks_in_59_page6_button {
+	display:block;
+	position: relative;
+	text-align: center;
+}
+
+
+#stacks_in_59_page6 a:link, #stacks_in_59_page6 a:visited {
+	 display:inline-block; 
+	
+	
+	position: relative;
+	text-decoration:none;
+}
+#stacks_in_59_page6 a:hover, #stacks_in_59_page6 a:active {
+	color:#FFFFFF;
+}
+
+
+
+
+
+
+
+#stacks_in_59_page6 a:link, #stacks_in_59_page6 a:visited {
+	background-color:#15A050;
+	background: -webkit-gradient(linear, left top, left bottom, from(#15A050), to(#0C6030));
+	border:1px solid #0C6030;
+	padding:3px 20px;
+	border-radius:30px;
+	color:#FFFFFF;
+	box-shadow:rgba(0, 0, 0, 0.5) 0px 1px 2px;
+	margin:5px;
+	font-weight:bold;
+}
+#stacks_in_59_page6 a:hover {
+	background-color:#16AC56;
+	background: -webkit-gradient(linear, left top, left bottom, from(#16AC56), to(#0B5329));
+	box-shadow:rgba(0, 0, 0, 0.25) 0px 2px 4px;
+}
+#stacks_in_59_page6 a:active {
+	background-color:#15A050;
+	box-shadow:rgba(0, 0, 0, 0.75) 0px 0px 4px inset;
+}
+
+
+
+
+#stacks_in_59_page6 {
+	margin:  20px;
+	padding:  2px;
+}
