--- a/files/stacks_page_page3.css
+++ b/files/stacks_page_page3.css
@@ -1,3 +1,10 @@
+
+#stacks_in_27_page3 {
+	border: solid rgba(77, 77, 77, 1.00);
+	border-width:  4px;
+	margin:  20px;
+	padding:  20px;
+}
 #stacks_in_2_page3>.s3_row {
 	margin: 0 -10px;
 }
